--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,10 +13,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
-            <!-- AppBarLayout to manage sticky behavior of the search bar -->
             <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -26,7 +23,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <!-- ViewPager2 Carousel -->
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/viewPagerCarousel"
                         android:layout_width="match_parent"
@@ -50,32 +46,33 @@
                         app:tabIndicatorHeight="0dp"
                         app:tabMode="fixed" />
 
-                    <!-- Sticky Search Bar -->
                     <EditText
                         android:id="@+id/searchBar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="8dp"
+                        android:layout_marginBottom="10dp"
                         android:background="@drawable/round_corner_rectangle"
                         android:drawableStart="@android:drawable/ic_menu_search"
                         android:drawablePadding="8dp"
                         android:hint="Search"
                         android:inputType="text"
                         android:padding="12dp"
-                        android:layout_marginBottom="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tabLayoutIndicator"
                         app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
             </com.google.android.material.appbar.AppBarLayout>
-                    <!-- RecyclerView for List -->
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:paddingBottom="8dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:paddingBottom="8dp" />
 
         </LinearLayout>
 
