--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Items: 0"
+        android:padding="10dp"
+        android:background="@drawable/round_corner_rectangle"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <TextView
