--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
@@ -20,7 +19,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/imgView"
+                android:id="@+id/itemImgView"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginStart="12dp"
@@ -35,16 +34,14 @@
                 android:layout_marginStart="10dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintStart_toEndOf="@id/imgView"
+                app:layout_constraintLeft_toLeftOf="@id/itemImgView"
+                app:layout_constraintStart_toEndOf="@id/itemImgView"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/titleText"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="sdasddfgggssghhdddddd"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
 
@@ -52,12 +49,10 @@
                     android:id="@+id/subtitleText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="sdasddfgggghh"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
 
             </LinearLayout>
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
