--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:cardCornerRadius="12dp"
-        android:layout_margin="15dp"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginVertical="5dp"
         android:layout_gravity="center"
         >
 
